{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 437,
  "lineage": "e27d3a9a-e933-1595-63db-ac0d281b3de5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dev",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fb0b8c1424f266b",
            "arn": "arn:aws:ec2:us-east-2:224078010398:instance/i-04903a1c79a987f35",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_instance_profile",
            "id": "i-04903a1c79a987f35",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07bf264c41fa6f7f0",
            "private_dns": "ip-10-3-0-140.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.3.0.140",
            "public_dns": "ec2-3-133-146-37.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.146.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08b119d751e66eb5a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d1bd4887a029c236"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0884807c8e49808b9",
            "tags": {
              "Name": "mon_instance"
            },
            "tags_all": {
              "Name": "mon_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d1bd4887a029c236"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_iam_role.ec2_instance_role",
            "aws_key_pair.ma_cle",
            "aws_security_group.groupedesecurite",
            "aws_subnet.public_subnetdev",
            "aws_vpc.dev_vpc",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-compteArchive",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].log",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:894522627426:internet-gateway/igw-00762a958258998af",
            "id": "igw-00762a958258998af",
            "owner_id": "894522627426",
            "tags": {
              "Name": "igw-compteArchive"
            },
            "tags_all": {
              "Name": "igw-compteArchive"
            },
            "vpc_id": "vpc-01cb0524621546167"
          },
          "dependencies": [
            "aws_vpc.logArchive_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-comptedev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dev",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:224078010398:internet-gateway/igw-008bc65437ff7fd2f",
            "id": "igw-008bc65437ff7fd2f",
            "owner_id": "224078010398",
            "tags": {
              "Name": "igw-compteDev"
            },
            "tags_all": {
              "Name": "igw-compteDev"
            },
            "vpc_id": "vpc-0820fd35745d4ea69"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-comptegestion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018038634762:internet-gateway/igw-06e9b47de8bd61509",
            "id": "igw-06e9b47de8bd61509",
            "owner_id": "018038634762",
            "tags": {
              "Name": "igw-comptegestion"
            },
            "tags_all": {
              "Name": "igw-comptegestion"
            },
            "vpc_id": "vpc-02b4ae6e788080650"
          },
          "dependencies": [
            "aws_vpc.comptegestion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "table_pub_compteArchive",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].log",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:894522627426:route-table/rtb-0c5c139df84e36e8a",
            "id": "rtb-0c5c139df84e36e8a",
            "owner_id": "894522627426",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00762a958258998af",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "table_pub_compteArchive"
            },
            "tags_all": {
              "Name": "table_pub_compteArchive"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cb0524621546167"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-compteArchive",
            "aws_vpc.logArchive_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "table_pub_comptedev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dev",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:224078010398:route-table/rtb-0a4152c9bc2f04d3d",
            "id": "rtb-0a4152c9bc2f04d3d",
            "owner_id": "224078010398",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-008bc65437ff7fd2f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "table_pub_comptedev"
            },
            "tags_all": {
              "Name": "table_pub_comptedev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0820fd35745d4ea69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-comptedev",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "table_pub_comptegestion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018038634762:route-table/rtb-058dc720d21cfe7c0",
            "id": "rtb-058dc720d21cfe7c0",
            "owner_id": "018038634762",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06e9b47de8bd61509",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "table_pub_comptegestion"
            },
            "tags_all": {
              "Name": "table_pub_comptegestion"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b4ae6e788080650"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-comptegestion",
            "aws_vpc.comptegestion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table_pub_compteArchive",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].log",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ff3f850e12fd01e",
            "route_table_id": "rtb-0c5c139df84e36e8a",
            "subnet_id": "subnet-0f61123946a735379"
          },
          "dependencies": [
            "aws_internet_gateway.igw-compteArchive",
            "aws_route_table.table_pub_compteArchive",
            "aws_subnet.public_subnetlog",
            "aws_vpc.logArchive_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table_pub_comptedev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dev",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01409b7c962aa45af",
            "route_table_id": "rtb-0a4152c9bc2f04d3d",
            "subnet_id": "subnet-0884807c8e49808b9"
          },
          "dependencies": [
            "aws_internet_gateway.igw-comptedev",
            "aws_route_table.table_pub_comptedev",
            "aws_subnet.public_subnetdev",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table_pub_comptegestion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011982420e63e4aa3",
            "route_table_id": "rtb-058dc720d21cfe7c0",
            "subnet_id": "subnet-06de27b4698025129"
          },
          "dependencies": [
            "aws_internet_gateway.igw-comptegestion",
            "aws_route_table.table_pub_comptegestion",
            "aws_subnet.public_subnetkhady",
            "aws_vpc.comptegestion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "groupedesecurite",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dev",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:224078010398:security-group/sg-0d1bd4887a029c236",
            "description": "Autoriser trafic HTTP, HTTPS  et SSH entrant",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1bd4887a029c236",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "securitygroup_traffic",
            "name_prefix": "",
            "owner_id": "224078010398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "securitygroup"
            },
            "tags_all": {
              "Name": "securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0820fd35745d4ea69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnetkhady",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018038634762:subnet/subnet-02b02d9a365a1d1ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b02d9a365a1d1ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "018038634762",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnetkhady"
            },
            "tags_all": {
              "Name": "private_subnetkhady"
            },
            "vpc_id": "vpc-02b4ae6e788080650"
          },
          "dependencies": [
            "aws_vpc.comptegestion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnetdev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dev",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:224078010398:subnet/subnet-0884807c8e49808b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.3.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0884807c8e49808b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224078010398",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnetdev"
            },
            "tags_all": {
              "Name": "public_subnetdev"
            },
            "vpc_id": "vpc-0820fd35745d4ea69"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnetkhady",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018038634762:subnet/subnet-06de27b4698025129",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06de27b4698025129",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "018038634762",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnetkhady"
            },
            "tags_all": {
              "Name": "public_subnetkhady"
            },
            "vpc_id": "vpc-02b4ae6e788080650"
          },
          "dependencies": [
            "aws_vpc.comptegestion_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnetlog",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].log",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:894522627426:subnet/subnet-0f61123946a735379",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f61123946a735379",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "894522627426",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnetlog"
            },
            "tags_all": {
              "Name": "public_subnetlog"
            },
            "vpc_id": "vpc-01cb0524621546167"
          },
          "dependencies": [
            "aws_vpc.logArchive_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "comptegestion_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018038634762:vpc/vpc-02b4ae6e788080650",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-087c9766d0637fad4",
            "default_route_table_id": "rtb-0e474a9bb12948008",
            "default_security_group_id": "sg-0b32551b778eeabc6",
            "dhcp_options_id": "dopt-099e3e3086960ad0c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02b4ae6e788080650",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e474a9bb12948008",
            "owner_id": "018038634762",
            "tags": {
              "Name": "comptegestion_vpc"
            },
            "tags_all": {
              "Name": "comptegestion_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dev",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:224078010398:vpc/vpc-0820fd35745d4ea69",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/16",
            "default_network_acl_id": "acl-0dbfdef5d905c5c56",
            "default_route_table_id": "rtb-042947692de3b1dc0",
            "default_security_group_id": "sg-0eecb728a0f27433a",
            "dhcp_options_id": "dopt-0509ff6c06a38845a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": true,
            "id": "vpc-0820fd35745d4ea69",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-042947692de3b1dc0",
            "owner_id": "224078010398",
            "tags": {
              "Name": "dev_vpc"
            },
            "tags_all": {
              "Name": "dev_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "logArchive_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].log",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:894522627426:vpc/vpc-01cb0524621546167",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0ff9982969a32d1dc",
            "default_route_table_id": "rtb-07100c59fe35701aa",
            "default_security_group_id": "sg-08c3ccaa83155430b",
            "dhcp_options_id": "dopt-0784a4e7b92173ba3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01cb0524621546167",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07100c59fe35701aa",
            "owner_id": "894522627426",
            "tags": {
              "Name": "logArchive_vpc"
            },
            "tags_all": {
              "Name": "logArchive_vpc"
            }
          }
        }
      ]
    }
  ]
}